tests/swift-fixtures/tier0-lexical/bad_lexical.swift
// Tier 0 — a lexical error: the string literal is never closed.
let greeting = "hello, world   // expected-error{{unterminated}}
